--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 opencv-python==4.9.0.80
+
+#torch depends on the Cuda compatibility, I am using torch 2.5.1+cu121
 torch
+
 transformers==4.53.1
 pillow==11.0.0
 numpy==1.26.4
 ultralytics==8.3.53
+ndjson==0.3.1
+
 # For OpenAI CLIP (used in normal_clip.py), install from GitHub:
 git+https://github.com/openai/CLIP.git 
