update the processing pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,14 @@
 /vid_759.mp4
 /vid_772.mp4
 /vid_772_annotated.mp4
+rally_activity_log_dense_sample.csv
+rally_activity_log_merged.csv
+sample.json
+Export  project - YOLO incorrect predicted videos 24.6.2025 - 7_15_2025.ndjson
+Metadata
+data
+videos
+car_state.csv
+t.py
+detect_offroad_videos.py
+car_state copy.csv
